# gcal-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/gcal_sdk/: __init__.py  auth.py  calendars.py  client.py  events.py  freebusy.py  models.py
tests/: conftest.py  test_calendars.py  test_events.py  test_freebusy.py
