[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcal-sdk"
version = "0.1.0"
description = "A clean, typed Python SDK for the Google Calendar API v3"
readme = "README.md"
license = "MIT"
requires-python = ">= 3.10"
authors = [
    { name = "Lucas Draney" },
]
keywords = ["google", "calendar", "api", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "google-api-python-client >= 2.0",
    "google-auth-oauthlib >= 1.0",
    "google-auth-httplib2 >= 0.2",
    "pydantic >= 2.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.0",
    "pytest-ordering >= 0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gcal_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
